# bq-entity-resolution

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: defaults.yml
config/examples/: advanced_signal_framework.yml  banking_kyc.yml  compound_detection.yml  customer_dedup.yml  education_student.yml  enrichment_geocoding.yml  entity_type_person.yml  healthcare_patient.yml  incremental_processing.yml  insurance_entity.yml  kubernetes_deployment.yml  logistics_carrier.yml  minimal_dedup.yml  multi_source_linkage.yml  person_linkage.yml  probabilistic_matching.yml  real_estate_property.yml  retail_customer.yml  telecom_subscriber.yml  vendor_master.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  FUNCTIONS.md  GETTING_STARTED.md  OPERATIONS.md  TUNING.md  incremental_processing.md
examples/: run_local.py
examples/configs/: address_dedup.yml  banking_customers.yml  ecommerce_products.yml  fuzzy_persons.yml  healthcare_patients.yml  insurance_claims.yml  multi_source_crm.yml  schema_org_persons.yml  vehicle_registry.yml
examples/datasets/: address_dedup.csv  banking_customers.csv  crm_contacts.csv  ecommerce_products.csv  erp_customers.csv  fuzzy_persons.csv  healthcare_patients.csv  insurance_claims.csv  schema_org_persons.csv  support_tickets.csv  vehicle_registry.csv
examples/sample_data/: README.md  customers.csv  sample_dedup.yml
src/bq_entity_resolution/: __init__.py  __main__.py  columns.py  constants.py  exceptions.py  naming.py  registry.py
src/bq_entity_resolution/backends/: __init__.py  bigquery.py  bqemulator.py  context.md  duckdb.py  protocol.py
src/bq_entity_resolution/blocking/: __init__.py  engine.py  lsh.py  standard.py
src/bq_entity_resolution/cli/: __init__.py  main.py
src/bq_entity_resolution/clients/: __init__.py  (+1 more)
tests/: conftest.py
tests/fixtures/: sample_config.yml
tests/integration/: conftest.py  test_bqemu_backend.py  test_builder_execution.py  test_comparison_execution.py  test_compound_detection.py  test_feature_execution.py  test_local_blocking.py  test_pipeline_e2e.py  test_synthetic_matching.py
tests/unit/: test_cli.py  test_columns.py  test_enterprise_hardening.py  test_naming.py
(+342 files in other folders)
